Finalización de pagina. Version Inicial

--- a/src/components/Condition.astro
+++ b/src/components/Condition.astro
@@ -1,5 +1,5 @@
 ---
-const { imageSrc = '/images/image.png' } = Astro.props;
+const { imageSrc = '/src/assets/images/image.png' } = Astro.props;
 ---
 
 <div class="conditions">
