--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,29 +4,32 @@
 <footer class="footer">
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="/images/logo-2.png" alt="Sincronia Inmobiliaria Logo" class="logo" />
+        <img src="/src/assets/images/logo-2.png" alt="Sincronia Inmobiliaria Logo" class="logo" />
       </div>
       <div class="footer-links">
         <h4 class="footer-title">Enlaces</h4>
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Servicios</a></li>
-          <li><a href="#">Nosotros</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="https://sincroinmobiliarios.com/" target="_blank">Inicio</a></li>
+          <li><a href="https://sincroinmobiliarios.com/inmuebles/?search_location=101#results" target="_blank">Venta</a></li>
+          <li><a href="https://sincroinmobiliarios.com/inmuebles/?search_location=102#results" target="_blank">Arriendo</a></li>
+          <li><a href="https://sincroinmobiliarios.com/sobre-nosotros/" target="_blank">Nosotros</a></li>
+          <li><a href="https://sincroinmobiliarios.com/contacto/" target="_blank">Contacto</a></li>
         </ul>
       </div>
       <div class="footer-contact">
         <h4 class="footer-title">Contacto</h4>
-        <p>Dirección: Calle Principal #123, Ciudad</p>
-        <p>Teléfono: +57 300 123 4567</p>
-        <p>Email: info@sincronia.com</p>
+        <p>Solo WhatsApp: +57 3009127323</p>
+        <p><b>Llamadas:</b></p>
+        <p><b>Nacionales:</b> +57 (602) 3989665</p>
+        <p><b>Internacionales:</b> +1 (786)-297-8223</p>
+        <p>Email: sincronia@sincroinmobiliarios.com</p>
       </div>
       <div class="footer-social">
         <h4 class="footer-title">Síguenos</h4>
         <div class="social-icons">
-          <a href="#" target="_blank" rel="noopener noreferrer"><img src="/images/facebook.svg" alt="Facebook" /></a>
-          <a href="#" target="_blank" rel="noopener noreferrer"><img src="/images/instagram.svg" alt="Instagram" /></a>
-          <a href="#" target="_blank" rel="noopener noreferrer"><img src="/images/twitter.svg" alt="Twitter" /></a>
+          <a href="https://www.facebook.com/profile.php?id=100070303461303" target="_blank" rel="noopener noreferrer"><img src="/src/assets/images/facebook.svg" alt="Facebook" /></a>
+          <a href="https://www.instagram.com/sincronia_123/" target="_blank" rel="noopener noreferrer"><img src="/src/assets/images/instagram.svg" alt="Instagram" /></a>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="/src/assets/images/youtube.svg" alt="Youtube" /></a>
         </div>
       </div>
     </div>
