--- a/src/components/Spam_two.astro
+++ b/src/components/Spam_two.astro
@@ -3,12 +3,12 @@
       <h2>AGENDA TU CITA AHORA</h2>
       <h3>Y encuentra el hogar de tus sueños</h3>
       <div class="buttons">
-        <button class="btn-primary">Conoce todas las propiedades</button>
-        <button class="btn-secondary">Contáctanos ahora</button>
+        <a href="https://identity.truora.com/preview/IPF788d0ff5d3f17fd77a0764ddcf65c042" target="_blank" style="text-decoration: none!important;" class="btn-primary">Agenda tu Cita</a>
+        <a href="tel:+576023989665" target="_blank" style="text-decoration: none!important;" class="btn-secondary">Contáctanos ahora</a>
       </div>
     </div>
   
-    <img src="/images/service1.jpg" alt="Imagen de fondo" class="background-image" />
+    <img src="/src/assets/images/contact.jpg" alt="Imagen de fondo" class="background-image" />
   </div>
   
   <style>
