Correciones de diseño, adecuaciones moviles

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,7 +29,7 @@
         <div class="social-icons">
           <a href="https://www.facebook.com/profile.php?id=100070303461303" target="_blank" rel="noopener noreferrer"><img src="/src/assets/images/facebook.svg" alt="Facebook" /></a>
           <a href="https://www.instagram.com/sincronia_123/" target="_blank" rel="noopener noreferrer"><img src="/src/assets/images/instagram.svg" alt="Instagram" /></a>
-          <a href="#" target="_blank" rel="noopener noreferrer"><img src="/src/assets/images/youtube.svg" alt="Youtube" /></a>
+          <a href="#" target="_blank" rel="noopener noreferrer" hidden ><img src="/src/assets/images/youtube.svg" alt="Youtube" /></a>
         </div>
       </div>
     </div>
@@ -62,8 +62,11 @@
     }
   
     .logo {
-      max-width: 150px;
+      max-width: 180px;
       height: auto;
+      background-color: white;
+      border-radius: 50%;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
     }
   
     .footer-links ul,
