--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -10,6 +10,7 @@ const { title, subtitle, logoUrl, videoUrl } = Astro.props;
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/src/assets/images/logo-icon.webp" sizes="32x32">
   <title>{title}</title>
   <style>
     /* Reset default body margins and paddings */
