--- a/src/components/ContactInfo.astro
+++ b/src/components/ContactInfo.astro
@@ -3,11 +3,11 @@
   <div class="card">
     <h3><b>Linea nacional e internacional</b></h3>
     <div class="buttons">
-      <a href="http://wa.me/+573009127323" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/phone-icon.svg" alt="Phone" /></a>
+      <a href="tel:+17862978223" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/phone-icon.svg" alt="Phone" /></a>
       <p><b>+1 (786)-297-8223</b><br/> Miami - Estados Unidos</p><br/>
     </div>
     <div class="buttons">
-      <a href="http://wa.me/+573009127323" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/phone-icon.svg" alt="Phone" /></a>
+      <a href="tel:+576023989665" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/phone-icon.svg" alt="Phone" /></a>
       <p><b>+57 (602) 3989665</b><br/> Cali - Colombia</p><br/>
     </div>
     <h3><b>Escribenos a nuestro correo o WhatsApp</b></h3>
@@ -19,7 +19,7 @@
   <div class="card">
     <h3><b>Contactanos en nuestros canales de atención</b></h3>
     <div class="buttons">
-      <a href="www.sincroinmobiliarios.com" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/web-green.svg" alt="Web" /></a>
+      <a href="https://www.sincroinmobiliarios.com" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/web-green.svg" alt="Web" /></a>
       <p><b><b>www.sincroinmobiliarios.com</b></p><br/>
     </div>
     <h3><b>Redes Sociales</b></h3>
