--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,28 +7,70 @@ const { title, subtitle, logoUrl, videoUrl } = Astro.props;
     <img src="/src/assets/images/logo-2.png" alt="Logo" class="logo" />
     <h1>{title}</h1>
     <div class="buttons">
-      <a href="http://wa.me/+573009127323" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/whatsapp-white.svg" alt="WhatsApp" /></a>
-      <a href="https://www.instagram.com/sincronia_123/" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/instagram-outline.svg" alt="Instagram" /></a>
-      <a href="https://www.facebook.com/profile.php?id=100070303461303" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/facebook-outline.svg" alt="Facebook" /></a>
-      <a href="mailto:sincronia@sincroinmobiliarios.com" style="text-decoration: none!important;"><img style="width: 50px; height: 50px;" src="/src/assets/images/mail-outline.svg" alt="Email" /></a>
-    </div><br/>
-    <p>Cali - Colombia  /  Miami - Estados Unidos</p>
+      <a
+        href="http://wa.me/+573009127323"
+        style="text-decoration: none!important;"
+        ><img
+          style="width: 50px; height: 50px;"
+          src="/src/assets/images/whatsapp-white.svg"
+          alt="WhatsApp"
+        /></a
+      >
+      <a
+        href="https://www.instagram.com/sincronia_123/"
+        style="text-decoration: none!important;"
+        ><img
+          style="width: 50px; height: 50px;"
+          src="/src/assets/images/instagram-outline.svg"
+          alt="Instagram"
+        /></a
+      >
+      <a
+        href="https://www.facebook.com/profile.php?id=100070303461303"
+        style="text-decoration: none!important;"
+        ><img
+          style="width: 50px; height: 50px;"
+          src="/src/assets/images/facebook-outline.svg"
+          alt="Facebook"
+        /></a
+      >
+      <a
+        href="mailto:sincronia@sincroinmobiliarios.com"
+        style="text-decoration: none!important;"
+        ><img
+          style="width: 50px; height: 50px;"
+          src="/src/assets/images/mail-outline.svg"
+          alt="Email"
+        /></a
+      >
+    </div><br />
+    <p>Cali - Colombia / Miami - Estados Unidos</p>
     <div class="buttons">
-      <a href="tel:+576023989665" class="btn-primary" style="text-decoration: none!important;">Línea Nacional</a>
-      <a href="tel:+17862978223" class="btn-secondary" style="text-decoration: none!important;">Línea Internacional</a>
+      <a
+        href="tel:+576023989665"
+        class="btn-primary"
+        style="text-decoration: none!important;">Línea Nacional</a
+      >
+      <a
+        href="tel:+17862978223"
+        class="btn-secondary"
+        style="text-decoration: none!important;">Línea Internacional</a
+      >
     </div>
   </div>
 
   <!-- Video de fondo -->
-  <video autoplay muted loop class="background-video">
-    <source src="/src/assets/images/VIDEO-FONDO.mp4" type="video/mp4" />
-    Tu navegador no soporta videos.
-  </video>
+  <img
+    src="/src/assets/images/VIDEO-FONDO.gif"
+    alt="Fondo animado"
+    class="background-gif"
+  />
 </header>
 
 <style>
   header {
     position: relative;
+    padding: 100px 0 100px 0;
     width: 100%;
     height: 60vh;
     display: flex;
@@ -37,6 +79,16 @@ const { title, subtitle, logoUrl, videoUrl } = Astro.props;
     color: white;
     text-align: center;
     overflow: hidden;
+  }
+  .background-gif {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; /* detrás del contenido */
+    pointer-events: none; /* opcional: evita que el GIF interfiera con clics */
   }
 
   .header-content {
@@ -51,7 +103,10 @@ const { title, subtitle, logoUrl, videoUrl } = Astro.props;
   }
 
   .logo {
-    max-width: 300px;
+    width: 180px;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
   }
 
   h1 {
@@ -71,7 +126,6 @@ const { title, subtitle, logoUrl, videoUrl } = Astro.props;
     margin-top: 20px;
   }
 
-
   .btn-primary {
     background-color: #84c3a8;
     border-radius: 5px;
@@ -82,14 +136,13 @@ const { title, subtitle, logoUrl, videoUrl } = Astro.props;
     background-color: #84c3a8;
     transition: all 0.3s ease;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    
-    
   }
 
-  .btn-primary:hover, .btn-secondary:hover {
-      background-color: #6fae94;
-      transform: translateY(-3px);
-    }
+  .btn-primary:hover,
+  .btn-secondary:hover {
+    background-color: #6fae94;
+    transform: translateY(-3px);
+  }
 
   .btn-secondary {
     border-radius: 5px;
@@ -110,15 +163,15 @@ const { title, subtitle, logoUrl, videoUrl } = Astro.props;
     height: 100%;
     object-fit: cover;
     filter: brightness(0.5);
-    z-index: -1; 
+    z-index: -1;
   }
 
-.video {
-  position: relative;
-  width: 100%;
-  height: auto;
-  /* El filtro brightness(0.5) oscurece el video. */
-  /* El filtro sepia(1) da un tinte cálido a la imagen, */
-  /* hue-rotate(120deg) cambia el color a un tono verde, y saturate(2) aumenta la intensidad del color. */
-}
+  .video {
+    position: relative;
+    width: 100%;
+    height: auto;
+    /* El filtro brightness(0.5) oscurece el video. */
+    /* El filtro sepia(1) da un tinte cálido a la imagen, */
+    /* hue-rotate(120deg) cambia el color a un tono verde, y saturate(2) aumenta la intensidad del color. */
+  }
 </style>
